Fix bugs associated with allele count bars in tooltip. 1. Fix bug where mother/father bars were not showing.  This was due to a couple of bugs, one where the mother/father depths were not being initialized to the correct value in variantTrioModel; the other where the mother depth was sent instead of the father depth.  https://github.com/tonydisera/gene.iobio/issues/175#issuecomment-178209728 2. Handle multi-allelics so that the VCF is parsed to handle a comma separated value for alt counts.  Show grey section in bar where other allele counts are involved in total allele count. https://github.com/tonydisera/gene.iobio/issues/190

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -112,13 +112,24 @@ rect
   &.alt-count
     fill: #6A9C2F !important
 
+  &.other-count
+    stroke: black !important
+    fill: rgb(132,132,132) !important 
+
+
+
 text
   &.alt-count
     fill: white !important
 
   &.alt-count-under
     fill: black !important  
-    
+
+  &.other-count
+    fill: white  !important    
+
+  &.other-count-under
+    fill: rgb(132,132,132)  !important    
 
 #examine-card .tooltip-allele-count-bar
   overflow-wrap: break-word
